--- a/pages/activities.html
+++ b/pages/activities.html
@@ -243,9 +243,13 @@
     
     <li><strong>Invited Reviewer</strong>, Neurocomputing (<a href="https://www.sciencedirect.com/journal/neurocomputing"><strong><u><font color="#874e26">Neurocomputing</font></u></strong></a>)</li>
 
-   
+
     <li><strong>Invited Reviewer</strong>, Knowledge-Based Systems (<a href="http://www.jou
         rnals.elsevier.com/"><strong><u><font color="#874e26">KBS</font></u></strong></a>)</li>
+
+
+<!-- 2024.07.24 收到的审稿邀请 -->
+    <li><strong>Invited Reviewer</strong>, Computers and Electronics in Agriculture (<a href="https://www.sciencedirect.com/journal/computers-and-electronics-in-agriculture"><strong><u><font color="#874e26">CEA</font></u></strong></a>)</li>
 
 
 <!-- 2024.03.04 收到的审稿邀请 -->
