--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@ Check out Sheng's up-to-date CV for more details.
   <a href="https://scholar.google.com.hk/citations?view_op=top_venues&hl=zh-CN&vq=eng_computationallinguistics" target="_blank">2021 Scholar Metrics Released Provided by Google</a> |
   <a href="https://jackietseng.github.io/conference_call_for_paper/conferences-with-ccf.html" target="_blank">2019-2020 International Conferences in Artificial Intelligence, Machine Learning, Computer Vision, Data Mining, Natural Language Processing and Robotics</a> |
   <a href="https://aideadlin.es/?sub=ML,CV,NLP,RO,SP,DM" target="_blank">AI Conference Deadlines</a> |
+    <a href="https://ccfddl.github.io/" target="_blank">CCF Rec. Conference Deadlines</a> |
   <a href="https://mp.weixin.qq.com/s/6HuuRyHETiSOn2JJGD3TuA" target="_blank">2021下半年会议论文投稿时间小结与历年接受率回顾（欢迎收藏）</a> |
   <a href="https://zhuanlan.zhihu.com/p/371282122" target="_blank">NLP 2021-2022会议期刊整理</a> |
   <a href="https://mp.weixin.qq.com/s/dt-yurUZ_T7-58JKvpfuBg" target="_blank">官宣！高质量科技期刊分级目录来了！</a> |
