--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -241,7 +241,7 @@
     |
     <a href="" target="_blank">ICMR</a>
     |
-    <a href="" target="_blank">IJCNN</a>
+    <a href="https://2025.ijcnn.org/" target="_blank">IJCNN</a>
     |
     <a href="" target="_blank">PAKDD</a>
     |
@@ -533,6 +533,9 @@
     |
     <a href="https://chinamm.csig.org.cn/2024/index.html" target="_blank">ChinaMM</a>
     |
+<!-- Geographic Information Systems -->
+    <a href="https://sigspatial2024.sigspatial.org/" target="_blank">ACM SIGSPATIAL</a>
+    |
 <!-- software engineering - others -->
     <a href="https://chinasoft.ccf.org.cn/" target="_blank">ChinaSoft</a>
     |
@@ -579,7 +582,12 @@
     <a href="https://mp.weixin.qq.com/s/bBuQsROttWyqMZA4bk8Yig" target="_blank">快讯｜北邮GAMMA LAB的两篇工作被KDD 2024 录用</a>
     | 
     <a href="https://mp.weixin.qq.com/s/ThawLEkVGzun1gAIEd2yyw" target="_blank">新闻 | 我组八篇论文被 ICML 2024 录用</a>
-    |     
+    |  
+    <a href="https://mp.weixin.qq.com/s/AeyiINyeNqEy5pxZxPtlXw" target="_blank">北师大人工智能学院朱倩男老师论文被顶级会议录用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/_IKqiPzd3Iq0ltZ8fonUsA" target="_blank">知识工场多篇论文被 ACL 2024 与 MM 2024 录用</a>
+    |
+
 
 <h4>2023</h4>
 <!-- network - A -->
@@ -3776,7 +3784,118 @@ ChatGPT:
     | 
     <a href="https://mp.weixin.qq.com/s/nEedz8_wb7qnvtd9ENBKOg" target="_blank">ACL2024主会：中科院发布表格理解大模型Table-LLaVA，刷榜23项指标</a>
     |     
-
+    <!-- 2024.07.24 -->
+    <a href="https://mp.weixin.qq.com/s/rtmu5sdwK_rPndAaJKhjLQ" target="_blank">开源Llama 3.1一夜成最强大模型！超越闭源GPT-4o，OpenAI坐不住了</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/AvoooOlccIdqWCez_XO4mQ" target="_blank">ICML 2024十篇最佳论文开奖！贾扬清十年经典之作获时间检验奖</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/ndc4a8uKTlvJgUWtPkKXgg" target="_blank">复旦大学：没钱标数据的有福了！利用合成数据就能大幅提升大模型归纳推理能力</a>
+    | 
+    <!-- 2024.07.25 -->
+    <a href="https://mp.weixin.qq.com/s/BmCxHPzAM0HJ7pcDMwDolQ" target="_blank">重磅！Mistral Large 2深夜发布！Llama3.1仅一天被超越，最强开源再易主</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/fSc0Szi-zO6YVwp2oV8Uhg" target="_blank">终于有人把大模型的内部一致性和自反馈讲明白了</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/M3dAx9PSP8x7NA1HC85zzA" target="_blank">减轻幻觉新SOTA，7B模型自迭代训练效果超越GPT-4，上海AI lab发布</a>
+    |
+    <!-- 2024.07.26 -->
+    <a href="https://mp.weixin.qq.com/s/zqQZzpZdLFwW6_VUohfZjw" target="_blank">免费不限次！智谱清影一上线就被玩疯了，国产AI视频生成卷起来了</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/bnp6QyJ7eOnTSOs717N_eQ" target="_blank">谷歌再被OpenAI截胡？训练数学AI拿下IMO银牌，不及SearchGPT放了空响...</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/z5o_Hw-sgMVtIqZv3h-mwQ" target="_blank">AI浪潮下的“首届”奥运会！巴黎2024开幕在即，AI运动员助手、AI裁判员齐上场</a>
+    |
+    <!-- 2024.07.28 -->
+    <a href="https://mp.weixin.qq.com/s/VjuNGOmgJb7p3AodtlZEcA" target="_blank">密苏里大学许东：大模型时代，Prompt 为生物信息学研究带来新动力丨IJAIRR</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/HV4biaJ4cgPS3cq54Z8-sg" target="_blank">小模型狂飙！6家巨头争相发布小模型，Andrej Karpathy：大语言模型的尺寸竞争正在倒退...</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/z_x718kwKYFb_bfgQUkqag" target="_blank">华为诺亚发布无限上下文大模型，超越SoTA 4.3%</a>
+    |
+    <!-- 2024.07.29 -->
+    <a href="https://mp.weixin.qq.com/s/P4tl4X8vXUjktWc-LBxAWg" target="_blank">一万亿token！34亿张图像，扩大10倍！史上最大开源多模态数据集MINT-1T发布！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Js0Dvte5H7RsT4GsndGleA" target="_blank">Apple intelligence 正式开启测试！第一波文本工具测试体验来啦！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Lr9VZF6pOPFwm_FTq65f4w" target="_blank">今日arXiv最热大模型论文：北京大学最新综述：视觉大模型中的漏洞与攻防对抗</a>
+    |
+    <!-- 2024.07.30 -->
+    <a href="https://mp.weixin.qq.com/s/P4tl4X8vXUjktWc-LBxAWg" target="_blank">一万亿token！34亿张图像，扩大10倍！史上最大开源多模态数据集MINT-1T发布！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Lr9VZF6pOPFwm_FTq65f4w" target="_blank">今日arXiv最热大模型论文：北京大学最新综述：视觉大模型中的漏洞与攻防对抗</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Lr9VZF6pOPFwm_FTq65f4w" target="_blank">今日arXiv最热大模型论文：北京大学最新综述：视觉大模型中的漏洞与攻防对抗</a>
+    |
+    <!-- 2024.07.31 -->
+    <a href="https://mp.weixin.qq.com/s/eSIS1vd1vMUzwnva4yNjVQ" target="_blank">重磅惊喜！OpenAI突然上线GPT-4o超长输出模型！「Her」高级语音模式已开放测试！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/LupPcFuStZ0Al6iwpSEa7Q" target="_blank">大模型“挣钱”新方法！用GPT-4优化众筹文稿，提高筹款成功率11.9%！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/PJhlg_iz_zdZhsZ7unwdhg" target="_blank">北京大学：利用好不确定性，8B小模型也能超越GPT-4</a>
+    |
+    <!-- 2024.08.01 -->
+    <a href="https://mp.weixin.qq.com/s/kQiK_0cDsvmyXVNcsb4tJQ" target="_blank">ChatGPT装进脑机系统！躺着就能和全网聊嗨, 这也太赛博了吧</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/HKF-nLqlfoyrp9wqTME5og" target="_blank">NVIDIA把Llama-3的上下文长度扩展16倍，长上下文理解能力超越GPT-4</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/5ze54Di3lIL2la3pggkBiQ" target="_blank">谷歌开源最强端侧小模型：2B参数越级跑赢GPT-3.5-Turbo，苹果15Pro运行飞快</a>
+    |
+    <!-- 2024.08.02 -->
+    <a href="https://mp.weixin.qq.com/s/fwLgGQBjMDisCAScEG9i-w" target="_blank">人大高瓴发布Think-on-Graph 2.0，基于知识图的大模型推理再升级！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/cL5stTAN0--vJelkeLWERg" target="_blank">Gemini 1.5 Pro发布，赢了榜单第一，却被网友泼冷水</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/A_N5Q_8A320oGJFjGvlsag" target="_blank">当Runway的AI遇上土耳其银牌枪手老哥……</a>
+    |    
+    <!-- 2024.08.03 -->
+    <a href="https://mp.weixin.qq.com/s/NP3-XVs9cHR3zjLJF-KT9A" target="_blank">AI独角兽抢着上岸大厂了？Transfomer作者创办的Character.AI 正式被谷歌收编！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/pUnisRyDNkUJETRBAKmjVg" target="_blank">清华大学：未来你的同学可能都是机器人？基于多智能体的教室环境模拟！</a>
+    |
+    <!-- 2024.08.04 -->
+    <a href="https://mp.weixin.qq.com/s/Pan0sH7iDVfCI3U20b8aBw" target="_blank">大模型“脑回路”统一了？LLMs竟然能正确回答其他模型虚构的题目</a>
+    |
+    <!-- 2024.08.06 -->
+    <a href="https://mp.weixin.qq.com/s/4kP6NtxsAdD6avzcZS8wHw" target="_blank">再也不吹GPT-4V了！手机能跑的国产模型刷爆多模态SOTA，实时端上视频理解!</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/2vv13YKHHJrLF3j6spV4vA" target="_blank">谷歌顶不住了，官宣Gemini降价至GPT-4o mini的一半。我却激动不起来</a>
+    |
+    <a href="https://" target="_blank">再也不吹GPT-4V</a>
+    |
+    <!-- 2024.08.07 -->
+    <a href="https://mp.weixin.qq.com/s/E0z9wTy2G6NWd7fB8hikvw" target="_blank">程序员窃喜！卡了大模型脖子的Json输出，OpenAI终于做到了100%正确</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/QS5gBOBi851ekF-c4Ah_zQ" target="_blank">上海AI Lab 搭台，36个大模型一起角逐长上下文建模能力</a>
+    |
+    <!-- 2024.08.08 -->
+    <a href="https://mp.weixin.qq.com/s/-2OsAhgUFDAPKKwYo-UVcQ" target="_blank">玻璃心勿入，用了这个尖酸刻薄的AI智能体，博主们集体自闭！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/4mNd43wTiUbffSkRRAkYCA" target="_blank">无比顺滑！告别TTS！贾扬清领衔的Lepton AI推出实时语音交互</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Nsdmd7e0tS2-GJ_nimaYQA" target="_blank">陈丹琦团队揭Transformer内部原理：另辟蹊径，从构建初代聊天机器人入手</a>
+    |
+    <!-- 2024.08.12 -->
+    <a href="https://mp.weixin.qq.com/s/XUpAoQjMYie-8Oci3yNAog" target="_blank">看了闭幕式，我觉的，除了抽象，还是抽象！和国产AI一起毒舌太快乐了…</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/oCenk2T4BbazEg_XmLBtug" target="_blank">李飞飞、吴恩达、LeCun联名抗议加州AI限制法案！</a>
+    |
+    <!-- 2024.08.13 -->
+    <a href="https://mp.weixin.qq.com/s/s-L6u5-ZT-gFsXQh9FXm_g" target="_blank">真正的大佬，根本不会选“先搞起来再说”</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/QAN0uP3ulFFfazaE3VB2IA" target="_blank">香港大学发布组合性文生视频基准，7大类20项指标，让20个大模型一决雌雄</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/CloWiUUrmW5YexWJ4kbDdg" target="_blank">排行榜断层第一！Cosine推出“最强、最接近人类”的AI程序员！</a>
+    |
+    <!-- 2024.08.14 -->
+    <a href="https://mp.weixin.qq.com/s/HxX1zC0Jxk-h78umYRSMpg" target="_blank">谷歌「Her」来啦！发布Gemini Live语音模式，现场演示两次翻车</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/xVB7ZiCsrNbCrQZKb2mwjA" target="_blank">最强智能体Agent Q发布！Llama 3零样本成功率提升340%</a>
+    |
+    <!-- 2024.08.15 -->
+    <a href="https://mp.weixin.qq.com/s/RMwPScSP2y4KnSXkmoslhQ" target="_blank">香港理工：你精心设计的prompt，很容易被用户套出来！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/Ut44yD4pu6SvQNSGGn6MIA" target="_blank">刚刚！ACL2024最佳论文开奖！GloVe获时间检验奖</a>
+    | 
 </br>
 </br>
 AI论文: 
@@ -5544,7 +5663,10 @@ NLP Field：
 <br />
 <!-- Southern University of Science and Technology (SUSTech) -->
     <a href="https://ghchen.me/" target="_blank">Guanhua Chen</a>
-    |    
+    | 
+<!-- Faculty of Science, School of Computer Science, New Zealand -->
+    <a href="https://profiles.auckland.ac.nz/liu-qian/about" target="_blank">Qian Liu</a>
+    |     
   <br />
   <br />
 Dependency Analytics Field：
