--- a/pages/publications.html
+++ b/pages/publications.html
@@ -78,11 +78,25 @@
     "(SELECTED)" refers to the representative works of my primary research direction but not necessarily the best works! )
 
 
-<!-- 2023 year -->
+
+<!-- 2025 year -->
+<h4>2025</h4>
+<ol start="1">
+
+</ol>
+
+
+<!-- 2024 year -->
 <h4>2024</h4>
 <ol start="1">
 
+    <li>Jinze Sun, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://"><strong><font color= "#00066f">CEGRL-TKGR: A Causal Enhanced Graph Representation Learning Framework for Improving Temporal Knowledge Graph Extrapolation Reasoning</font></strong></a>. Arxiv
 
+
+    <li>Ming Liu*, Ran Liu, Ye Zhu, Hua Wang, Youyang Qu, Rongsheng Li, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, and Wray Buntine, <a href="https://arxiv.org/pdf/2405.00704v2"><strong><font color= "#00066f">A Survey on the Real Power of ChatGPT</font></strong></a>. Arxiv
+
+
+    <li>Lizhu Xiong, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://"><strong><font color= "#00066f">TKGR-PRRCL: Enhance Temporal Knowledge Graph Reasoning with Self-Weighted Path Representation and Relation-Level Contrastive Learning</font></strong></a>. The 13th CCF International Conference on Natural Language Processing and Chinese Computing (NLPCC). Hangzhou (<a href="http://tcci.ccf.org.cn/conference/2024/"><strong><u><font color="#874e26">NLPCC-24</font></u></strong></a>). China, November 1-3, 2024. (CCF-C)
 </ol>
 
 
@@ -93,7 +107,7 @@
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <strong><font color= "#00066f">A syntactic-based model for open relation extraction</font></strong></a>. Computer Science (<a href="http://www.jsjkx.com/CN/1002-137X/home.shtml"><strong><u><font color="#874e26">Computer Science</font></u></strong></a>). (In Chinese) (To be Submitted)</li>
 
 
-    <li>Xiaoshi Wang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Guangyu Zhang, Zhuping Ding, Lirong He, <a href=""><strong><font color= "#00066f">An Adaptive Clustering Centered-Oriented Projection Method for Hypernym-Hyponym Relation Identification</font></strong></a>. </li>
+    <!-- <li>Xiaoshi Wang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Guangyu Zhang, Zhuping Ding, Lirong He, <a href=""><strong><font color= "#00066f">An Adaptive Clustering Centered-Oriented Projection Method for Hypernym-Hyponym Relation Identification</font></strong></a>. </li> -->
 
 
     <li>Jinze Sun, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Ling Zhan, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="https://link.springer.com/chapter/10.1007/978-981-99-8073-4_26"><strong><font color= "#00066f">TKGR-RHETNE: A New Temporal Knowledge Graph Reasoning Model via Jointly Modeling Relevant Historical Event and Temporal Neighborhood Event Context</font></strong></a>. The 2023 International Conference on Neural Information Processing (ICONIP). Changsha (<a href="http://www.iconip2023.org/index.html"><strong><u><font color="#874e26">ICONIP-23</font></u></strong></a>). China, November 20-23, 2023. (CCF-C)
@@ -106,9 +120,7 @@
 <!-- 2022 year -->
 <hr align="left" width="100%">
 <h4>2022</h4>
-<ol start="1">
-    <!-- <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <strong><font color= "#00066f">A syntactic-based model for open relation extraction</font></strong></a>. Computer Science (<a href="http://www.jsjkx.com/CN/1002-137X/home.shtml"><strong><u><font color="#874e26">Computer Science</font></u></strong></a>). (In Chinese) (To be Submitted)</li> -->
- 
+<ol start="1"> 
     <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and Wenjie Li, <a href="#"><strong><font color= "#00066f">A Short Survey on Deep Learning-Based Open Relation Extraction: Recent Advances, Resources and Perspective</font></strong></a>. (Under Review)</li>
 
 
@@ -128,13 +140,6 @@
 <h4>2021</h4>
 <ol start="1">
     <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="#"><strong><font color= "#00066f">Incorporating Contextualized Definition into Term-Pair Representations for Enhanced Hypernym-hyponym Relation Identification</font></strong></a>. (Under Review)</li>
-
-
-<!--     <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="https://wilburone.github.io/index.html" target="_blank">Fuli Huang</a>, and <a href="https://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>*, <a href="#"><strong><font color= "#00066f">An Overview of Embedding Models of Entities and Relationships for Temporal Knowledge Graph Completion</font></strong></a>. (Under Review)</li> -->
-
-<!-- The 25th Pacific-Asia Conference on Knowledge Discovery and Data Mining (<a href="https://pakdd2021.org/"><strong><u><font color="#874e26">PAKDD-21</font></u></strong></a>). Delhi, India, May 11-14 2021 (To be Submitted)</li>  -->
-
-<!--     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="#"><strong><font color= "#00066f">An Extraction and Verification Framework for Harvesting Temporal Knowledge Graph from News Articles</font></strong></a>. (To be Submitted)</li> -->
 
 
     <li>Peng Zhao, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, and Xiaohui Zhan*, <a href="https://ieeexplore.ieee.org/document/9828919"><strong><font color= "#00066f">An advanced NMF-based approach for single cell data clustering</font></strong></a>. The 2022 2nd International Conference on Information Communication and Software Engineering (<a href="http://www.icse.org/index.html"><strong><u><font color="#874e26">ICICSE-22</font></u></strong></a>). Chongqing, China, March 18-20 2022 (EI Indexed)</li>
