--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -245,7 +245,7 @@
     |
     <a href="" target="_blank">PAKDD</a>
     |
-    <a href="" target="_blank">ECIR</a>
+    <a href="https://ecir2025.eu/" target="_blank">ECIR</a>
     |
     <a href="" target="_blank">UIC</a>
     |
@@ -256,7 +256,7 @@
     |
     <a href="https://www.wsdm-conference.org/2025/" target="_blank">WSDM</a>
     |
-    <a href="https://www.ecai2024.eu/" target="_blank">ECAI</a>
+    <a href="https://ecai2025.org/" target="_blank">ECAI</a>
     |
 <!-- social Computing - B-->
     <a href="" target="_blank">ICWSM</a>
@@ -543,7 +543,7 @@
     |
     <a href="https://ccf.org.cn/ICSS2024" target="_blank">ICSS</a>
     |
-    <a href="" target="_blank">ChineseCSCW</a>
+    <a href="https://conf.scholat.com/home/ccscw/2024" target="_blank">ChineseCSCW</a>
     |
     <a href="" target="_blank">AKBC</a>
     |
@@ -3895,7 +3895,9 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/RMwPScSP2y4KnSXkmoslhQ" target="_blank">香港理工：你精心设计的prompt，很容易被用户套出来！</a>
     | 
     <a href="https://mp.weixin.qq.com/s/Ut44yD4pu6SvQNSGGn6MIA" target="_blank">刚刚！ACL2024最佳论文开奖！GloVe获时间检验奖</a>
-    | 
+    |
+    <a href="https://mp.weixin.qq.com/s/4zG8lsVcN46ZBwfY_PuHLQ" target="_blank">TJUNLP 研发“伏羲传语”多语言大模型正式发布并开源</a>
+    |
 </br>
 </br>
 AI论文: 
