--- a/pages/activities.html
+++ b/pages/activities.html
@@ -137,6 +137,9 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
+    <li><strong>Invited Reviewer</strong>, The 31st International Conference on MultiMedia Modeling (<a href="https://mmm2025.net/"><strong><u><font color="#874e26">MMM 2025</font></u></strong></a>), Jara, Japan, January 7-10, 2025</li>
+
+
     <li><strong>Invited Reviewer</strong>, The 31st International Conference on Neural Information Processing (<a href="https://www.iconip2024.org/"><strong><u><font color="#874e26">ICONIP 2024</font></u></strong></a>), Auckland, New Zealand, December 2nd-6th, 2024</li>
 
 
