--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -243,7 +243,7 @@
     |
     <a href="https://2025.ijcnn.org/" target="_blank">IJCNN</a>
     |
-    <a href="" target="_blank">PAKDD</a>
+    <a href="https://pakdd2025.org/" target="_blank">PAKDD</a>
     |
     <a href="https://ecir2025.eu/" target="_blank">ECIR</a>
     |
@@ -277,7 +277,7 @@
     |
     <a href="" target="_blank">ISSRE</a>
     |
-    <a href="" target="_blank">ICSME</a>
+    <a href="https://conf.researchr.org/home/icsme-2025" target="_blank">ICSME</a>
     |  
     <a href="" target="_blank">ICPC</a>
     |
@@ -320,7 +320,7 @@
     |     
     <a href="" target="_blank">APSEC</a>
     |
-    <a href="" target="_blank">MSR</a>
+    <a href="https://2025.msrconf.org/" target="_blank">MSR</a>
     |
     <a href="" target="_blank">REFSQ</a>
     |
@@ -539,7 +539,7 @@
 <!-- software engineering - others -->
     <a href="https://chinasoft.ccf.org.cn/" target="_blank">ChinaSoft</a>
     |
-    <a href="" target="_blank">ChinaService</a>
+    <a href="https://ccf.org.cn/service2024" target="_blank">ChinaService</a>
     |
     <a href="https://ccf.org.cn/ICSS2024" target="_blank">ICSS</a>
     |
@@ -3898,6 +3898,32 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/4zG8lsVcN46ZBwfY_PuHLQ" target="_blank">TJUNLP 研发“伏羲传语”多语言大模型正式发布并开源</a>
     |
+    <!-- 2024.08.18 -->
+    <a href="https://mp.weixin.qq.com/s/9t7agKVtj56jduL4uJF4jA" target="_blank">终于来了！中国首个接入大模型的Linux开源操作系统正式发布！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/BaGOvt0VKutXf7QRH18ihg" target="_blank">稚晖君一口气发布5款人形机器人！开发者还能“0元购”</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/svQVzlXkqqXFQCIrzaY2vQ" target="_blank">浙江大学发布全能多模态大模型OmniBind，刷榜13大benchmark</a>
+    | 
+    <!-- 2024.08.19 -->
+    <a href="https://mp.weixin.qq.com/s/5L8pCW0NT9daHrBY_Nbatg" target="_blank">别等GPT-4o啦，国产「开源版」GPT-4o 来了！支持全模态、无障碍交流</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/tRYJipmY_5FqLwR8AOekug" target="_blank">faiss向量数据库测试《三体》全集，这家国产AI加速卡，把性能提了7倍！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/9t7agKVtj56jduL4uJF4jA" target="_blank">小模型站起来了，浏览器里跑出SOTA，抱抱脸：快逃，合成数据不是未来</a>
+    | 
+    <!-- 2024.08.20 -->
+    <a href="https://mp.weixin.qq.com/s/OzDp8nEvhcl6lE7Fxnt87g" target="_blank">率先测了一把阿里「世界最强」数学大模型后，我深吸一口气。。</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/dKIXtwzjaRkqHxluEvnvNg" target="_blank">上海交大发起跨境电商AI全球挑战赛！40万奖金悬赏“AI合规”专家，已启动报名！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/ntixj9HtrK0A-XOo2C_Ryw" target="_blank">阿里推出世界最强的数学模型Qwen2-Math，击败GPT4o、Claude3.5</a>
+    | 
+    <!-- 2024.08.21 -->
+    <a href="https://mp.weixin.qq.com/s/pST2aZI1VPc_4ruMtzGxYg" target="_blank">谢谢微软，又又又Open了！一口气发布3款Phi-3.5新模型，领先Llama3.1和谷歌同级模型</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/7jkDo8DFFIZ6Q3d3PIiO3A" target="_blank">小时级的长视频生成！浙江大学发布MovieDreamer，AI电影时代到来了？</a>
+    | 
 </br>
 </br>
 AI论文: 
